--- a/guess_the_cell/style.css
+++ b/guess_the_cell/style.css
@@ -2,29 +2,12 @@ html {
     font-family: sans-serif;
   }
   
-  form {
-    width: 600px;
-    margin: 0 auto;
+  td {
+    /* background-image: url(fonimg.jpg); */
+    height: 50px;
+    width: 50px;
   }
-  
-  div {
-    margin-bottom: 10px;
-  }
-  
-  fieldset {
-    /* background: cyan; */
-    border: 5px solid blue;
-  }
-  
-  legend {
-    padding: 10px;
-    background: blue;
-    color: cyan;
-  }
-  #statisticsArea  {
-    width: 600px;
-    height: 130px;
-    padding: 5px;
-    border: #2A9F00 solid 2px;
-    border-radius: 5px;
+
+  #statisticsArea {
+    resize: none;
   }
